troquei a cor do texto

--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
     <title>amandahairbc</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="amanda.css">
-    
+    <style>
+        body {
+            background-color: #ffffff; /* Cor de fundo branco */
+        }
+    </style>
 </head>
 <body>
     <div class="container py-4">
         <div class="row align-items-center mb-4">
             <div class="col-md-6">
-                <h1 class="display-5 fw-bold text-uppercase" style="color:#ff1493;">Alisamento sem formol</h1>
-                <p class="lead">Cabelos lisos marcantes, saudáveis e com brilho, sem riscos e sem dúvidas!<br>
-                Especialista em alisamento premium, com charme de alto padrão e resultados que encantam.</p>
+                <h1 class="display-5 fw-bold text-uppercase" style="color:#daa520;">Alisamento orgânico personalizado</h1>
+                <p class="lead">Te entrego um liso perfeito, saudável e com brilho, que te traz praticidade no dia a dia.
+                Especialista em alisamento premium em Balneário Camboriú, de alto padrão.</p>
                 <ul>
-                    <li>Sem cheiro forte, sem ardência, sem desconforto</li>
-                    <li>Resultados naturais e duradouros</li>
-                    <li>Atendimento personalizado e consultoria exclusiva</li>
+                    <li>Sem formol, sem cheiro forte, sem ardência, sem desconforto</li>
+                    <li>Resultados de excelência e duradouros</li>
+                    <li>Atendimento personalizado pensando no conforto e bem-estar!</li>
                 </ul>
             </div>
             <div class="col-md-6 text-center">
@@ -28,7 +32,7 @@
         <hr>
         <div class="row mb-4">
             <div class="col-12 text-center">
-                <h2 class="fw-bold" style="color:#ff69b4;">Veja o resultado dos nossos alisamentos</h2>
+                <h2 class="fw-bold" style="color:#daa520;">Veja o resultado dos nossos procedimentos</h2>
             </div>
         </div>
         <div class="row g-4 mb-5">
@@ -44,13 +48,12 @@
         </div>
         <div class="row">
             <div class="col-12 text-center">
-                <h3 class="fw-bold" style="color:#ff1493;">Destaque-se com um liso de verdade, sem formol!</h3>
-                <p>Agende agora mesmo e tire todas as suas dúvidas diretamente comigo pelo WhatsApp.<br>
-                Atendimento exclusivo para quem busca o melhor em beleza e saúde capilar.</p>
+                <h3 class="fw-bold" style="color:#daa520;">Transforme sua autoestima com um liso espelhado!</h3>
+                <p>Faça seu orçamento e agendamento pelo WhatsApp.<br> </p>
             </div>
         </div>
     </div>
-    <a href="https://wa.me/5547997430588?text=Quero%20agendar%20um%20alisamento%20sem%20formol!" class="btn btn-whatsapp" target="_blank">
+    <a href="https://wa.me/5547997430588?text=Quero%20agendar%20um%20alisamento%20sem%20formol!" class="btn btn-whatsapp" target="_blank" style="color:#daa520;">
         💖 Agende seu liso sem formol agora!
     </a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
