--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </ul>
             </div>
             <div class="col-md-6 text-center">
-                <img src="img/fotocabelo.jpeg" alt="Cabelo liso marcante" class="banner-img">
+                <img src="img/fotodaamanda.jpeg" alt="Cabelo liso marcante" class="banner-img">
             </div>
         </div>
         <hr>
@@ -36,16 +36,10 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="d-flex justify-content-center">
-                                <img src="img/cabelo.jpeg" class="d-block w-25 mx-2 banner-img" alt="Cabelo liso resultado 1">
-                                <img src="img/foto.jpeg" class="d-block w-25 mx-2 banner-img" alt="Cabelo liso resultado 2">
                                 <img src="img/fotocabelo.jpeg" class="d-block w-25 mx-2 banner-img" alt="Cabelo liso resultado 3">
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="d-flex justify-content-center">
-                                <img src="img/fotocabelo.jpeg" class="d-block w-25 mx-2 banner-img" alt="Cabelo liso resultado 3">
-                                <img src="img/cabelo.jpeg" class="d-block w-25 mx-2 banner-img" alt="Cabelo liso resultado 1">
-                                <img src="img/foto.jpeg" class="d-block w-25 mx-2 banner-img" alt="Cabelo liso resultado 2">
+                                <img src="img/cabelo amandaa 2.jpeg" class="d-block w-25 mx-2 banner-img" alt="Cabelo amanda 2 alternativo">
+                                <img src="img/cabeloamanda3.jpeg" class="d-block w-25 mx-2 banner-img" alt="Cabelo amanda 3">
+                                <img src="img/cabeloamanda4.jpeg" class="d-block w-25 mx-2 banner-img" alt="Cabelo amanda 4">
                             </div>
                         </div>
                     </div>
