--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>amandahairbc</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="amanda.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <div class="container py-4">
@@ -30,78 +31,34 @@
                 <h2 class="fw-bold">Veja o resultado dos nossos procedimentos</h2>
             </div>
         </div>
-        <div class="row mb-5">
-            <div class="col-12 text-center">
-                <div id="carouselProcedimentos" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <div class="d-flex justify-content-center">
-                                <div class="card border-0 mx-2" style="width: 300px;">
-                                    <img src="img/fotocabelo.jpeg" class="card-img-top" alt="Cabelo liso resultado 3" style="height: 400px; object-fit: cover;">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="d-flex justify-content-center">
-                                <div class="card border-0 mx-2" style="width: 300px;">
-                                    <img src="img/cabelo amandaa 2.jpeg" class="card-img-top" alt="Cabelo amanda 2 alternativo" style="height: 400px; object-fit: cover;">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="d-flex justify-content-center">
-                                <div class="card border-0 mx-2" style="width: 300px;">
-                                    <img src="img/cabeloamanda3.jpeg" class="card-img-top" alt="Cabelo amanda 3" style="height: 400px; object-fit: cover;">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <div class="d-flex justify-content-center">
-                                <div class="card border-0 mx-2" style="width: 300px;">
-                                    <img src="img/cabeloamanda4.jpeg" class="card-img-top" alt="Cabelo amanda 4" style="height: 400px; object-fit: cover;">
-                                </div>
-                            </div>
-                        </div>
+        <!-- Custom Carousel -->
+        <div class="custom-carousel-container">
+            <div class="custom-carousel-track-container">
+                <div class="custom-carousel-track">
+                    <div class="custom-carousel-card">
+                        <img src="img/cabelo amandaa 2.jpeg" alt="Cabelo amanda 2 alternativo">
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselProcedimentos" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselProcedimentos" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                    <!-- Indicadores de navegação -->
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselProcedimentos" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselProcedimentos" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselProcedimentos" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                        <button type="button" data-bs-target="#carouselProcedimentos" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    <div class="custom-carousel-card">
+                        <img src="img/cabeloamanda3.jpeg" alt="Cabelo amanda 3">
+                    </div>
+                    <div class="custom-carousel-card">
+                        <img src="img/cabeloamanda4.jpeg" alt="Cabelo amanda 4">
                     </div>
                 </div>
-                
-                <style>
-                    .card {
-                        transition: transform 0.3s ease;
-                    }
-                    .card:hover {
-                        transform: scale(1.05);
-                    }
-                    @media (max-width: 768px) {
-                        .card {
-                            width: 200px !important;
-                        }
-                        .card img {
-                            height: 300px !important;
-                        }
-                    }
-                </style>
             </div>
+            <button class="custom-carousel-button prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </button>
+            <button class="custom-carousel-button next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </button>
         </div>
-        <div class="row">
+        <div class="row mt-5">
             <div class="col-12 text-center">
-                <h3 class="fw-bold">Transforme sua autoestima com um liso espelhado!</h3>
-                <p>Faça seu orçamento e agendamento pelo WhatsApp.<br> </p>
+                <a href="https://www.instagram.com/espaco.amandahair?igsh=dzJ2d3Y4MDIwNW12" class="instagram-link" target="_blank">
+                    <i class="bi bi-instagram"></i>
+                    <span>Nos siga no Instagram</span>
+                </a>
             </div>
         </div>
     </div>
@@ -110,11 +67,67 @@
     </a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        const carouselProcedimentos = document.querySelector('#carouselProcedimentos');
-        const carousel = new bootstrap.Carousel(carouselProcedimentos, {
-            interval: 4000, // 4 segundos
-            ride: 'carousel'
+    document.addEventListener('DOMContentLoaded', function () {
+        const track = document.querySelector('.custom-carousel-track');
+        if (!track) return;
+
+        const nextButton = document.querySelector('.custom-carousel-button.next');
+        const prevButton = document.querySelector('.custom-carousel-button.prev');
+        const cards = Array.from(track.children);
+        const cardCount = cards.length;
+        let currentIndex = 0;
+
+        // Clone cards for the infinite loop
+        for (let i = 0; i < cardCount; i++) {
+            const clone = cards[i].cloneNode(true);
+            track.appendChild(clone);
+        }
+
+        function updateCarousel(smooth = true) {
+            const cardWidth = track.children[0].getBoundingClientRect().width;
+            const offset = -currentIndex * cardWidth;
+            track.style.transition = smooth ? 'transform 0.5s ease-in-out' : 'none';
+            track.style.transform = `translateX(${offset}px)`;
+        }
+
+        function showNext() {
+            currentIndex++;
+            updateCarousel();
+
+            if (currentIndex >= cardCount) {
+                // After the transition to the cloned slide, jump back to the real one
+                setTimeout(() => {
+                    currentIndex = 0;
+                    updateCarousel(false); // Jump without animation
+                }, 500); // Must match the CSS transition duration
+            }
+        }
+
+        function showPrev() {
+            if (currentIndex === 0) {
+                currentIndex = cardCount;
+                updateCarousel(false); // Jump to the end of the cloned list
+                setTimeout(() => {
+                    currentIndex--;
+                    updateCarousel(true);
+                }, 20);
+            } else {
+                currentIndex--;
+                updateCarousel();
+            }
+        }
+
+        nextButton.addEventListener('click', showNext);
+        prevButton.addEventListener('click', showPrev);
+
+        // Autoplay
+        setInterval(showNext, 4000);
+
+        // Recalculate on resize
+        window.addEventListener('resize', () => {
+            updateCarousel(false);
         });
+    });
     </script>
 </body>
 </html>
