--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
+
     <div class="container py-4">
         <div class="row align-items-center mb-4">
+                        <div class="col-md-6 text-center">
+                <img src="img/fotodaamanda.jpeg" alt="Amanda Hair" class="img-fluid rounded-circle mb-4 historia-img">
+            </div>
             <div class="col-md-6">
                 <h1 class="display-5 fw-bold text-uppercase">Alisamento orgânico personalizado</h1>
                 <p class="lead">Te entrego um liso perfeito, saudável e com brilho, que te traz praticidade no dia a dia.
@@ -21,9 +25,7 @@
                     <li>Atendimento personalizado pensando no conforto e bem-estar!</li>
                 </ul>
             </div>
-            <div class="col-md-6 text-center">
-                <img src="img/fotodaamanda.jpeg" alt="Cabelo liso marcante" class="banner-img">
-            </div>
+
         </div>
         <hr>
         <div class="row mb-4">
@@ -53,6 +55,7 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
             </button>
         </div>
+        <!--butao-->
         <div class="row mt-5">
             <div class="col-12 text-center">
                 <a href="https://www.instagram.com/espaco.amandahair?igsh=dzJ2d3Y4MDIwNW12" class="instagram-link" target="_blank">
@@ -61,6 +64,21 @@
                 </a>
             </div>
         </div>
+        <div class="container py-4">
+        <div class="row align-items-center">
+
+            <div class="col-md-6 historia-text">
+                <h2 class="fw-bold">Minha História</h2>
+                <p class="lead">Aos 14 anos, Amanda Hair deu seus primeiros passos no mundo dos alisamentos. Hoje, com mais de 5 anos de experiência e inúmeros cursos de especialização, ela se tornou referência no liso perfeito, se destacando na área por transformar cabelos com resultados surpreendentes e duradouros.</p>
+                <p>💆‍♀️ Atendimento personalizado e humanizado.</p>
+                <p>💖 Carinho e dedicação em cada etapa.</p>
+                <p>🌟 Lisos impecáveis que realçam a beleza natural.</p>
+                <p>Além de encantar suas clientes, Amanda compartilha todo o seu conhecimento através de cursos presenciais e on-line, formando novas profissionais e inspirando histórias de sucesso.</p>
+                <p class="fw-bold"> Amanda Hair – Muito mais que um liso perfeito, uma experiência transformadora.</p>
+            </div>
+        </div>
+        <hr>
+    </div>
     </div>
     <a href="https://wa.me/5547997430588?text=Quero%20agendar%20um%20alisamento%20sem%20formol!" class="btn btn-whatsapp" target="_blank">
         💖 Agende seu horário agora!
