--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 <body>
 
     <div class="container py-4">
-        <div class="row align-items-center mb-4">
+        <div class="logo-conteiner">
+            <img src="img/logoamanda.jpeg" alt="Amanda Hair Logo" class="logo mb-4">
+        </div>
+        <div class="row align-items-center mb-4"> 
+            
                         <div class="col-md-6 text-center">
-                <img src="img/fotodaamanda.jpeg" alt="Amanda Hair" class="img-fluid rounded-circle mb-4 historia-img">
+                <img src="img/fotodaamanda.jpeg" alt="Amanda Hair" class="larg rounded-circle mb-4 historia-img">
             </div>
             <div class="col-md-6">
                 <h1 class="display-5 fw-bold text-uppercase">Alisamento orgânico personalizado</h1>
                 <p class="lead">Te entrego um liso perfeito, saudável e com brilho, que te traz praticidade no dia a dia.
-                Especialista em alisamento premium em Balneário Camboriú, de alto padrão.</p>
+                 Especialista em alisamento premium em Balneário Camboriú, de alto padrão.</p>
                 <ul>
                     <li>Sem formol, sem cheiro forte, sem ardência, sem desconforto</li>
                     <li>Resultados de excelência e duradouros</li>
-                    <li>Atendimento personalizado pensando no conforto e bem-estar!</li>
+                    <li>Atendimento personalizado pensando no conforto e bem-estar!</li>                    
                 </ul>
             </div>
 
@@ -69,7 +73,7 @@
 
             <div class="col-md-6 historia-text">
                 <h2 class="fw-bold">Minha História</h2>
-                <p class="lead">Aos 14 anos, Amanda Hair deu seus primeiros passos no mundo dos alisamentos. Hoje, com mais de 5 anos de experiência e inúmeros cursos de especialização, ela se tornou referência no liso perfeito, se destacando na área por transformar cabelos com resultados surpreendentes e duradouros.</p>
+                <p class="lead"> Amanda Hair deu seus primeiros passos no mundo dos alisamentos. Hoje, com mais de 5 anos de experiência e inúmeros cursos de especialização, ela se tornou referência no liso perfeito, se destacando na área por transformar cabelos com resultados surpreendentes e duradouros.</p>
                 <p>💆‍♀️ Atendimento personalizado e humanizado.</p>
                 <p>💖 Carinho e dedicação em cada etapa.</p>
                 <p>🌟 Lisos impecáveis que realçam a beleza natural.</p>
@@ -77,7 +81,7 @@
                 <p class="fw-bold"> Amanda Hair – Muito mais que um liso perfeito, uma experiência transformadora.</p>
             </div>
         </div>
-        <hr>
+        
     </div>
     </div>
     <a href="https://wa.me/5547997430588?text=Quero%20agendar%20um%20alisamento%20sem%20formol!" class="btn btn-whatsapp" target="_blank">
