--- a/index.html
+++ b/index.html
@@ -24,12 +24,21 @@
                 <p class="lead">Te entrego um liso perfeito, saudável e com brilho, que te traz praticidade no dia a dia.
                  Especialista em alisamento premium em Balneário Camboriú, de alto padrão.</p>
                 <ul>
-                    <li>Sem formol, sem cheiro forte, sem ardência, sem desconforto</li>
-                    <li>Resultados de excelência e duradouros</li>
-                    <li>Atendimento personalizado pensando no conforto e bem-estar!</li>                    
+                    <li>💆‍♀️ Atendimento personalizado e humanizado.</li>
+                    <li>💖 Carinho e dedicação em cada etapa.</li>
+                    <li>🌟 Lisos impecáveis que realçam a beleza natural.</li>
+                    <li> Além de encantar suas clientes, Amanda compartilha todo o seu conhecimento através de cursos presenciais e on-line, formando novas profissionais e inspirando histórias de sucesso</li>                   
+                    <p class="fw-bold"> Amanda Hair – Muito mais que um liso perfeito, uma experiência transformadora.</p>
                 </ul>
+                <div class="row mt-5">
+                    <div class="col-12 text-center">
+                        <a href="https://www.instagram.com/espaco.amandahair?igsh=dzJ2d3Y4MDIwNW12" class="instagram-link" target="_blank">
+                            <i class="bi bi-instagram"></i>
+                            <span>Nos siga no Instagram</span>
+                        </a>
+                    </div>
+                </div>
             </div>
-
         </div>
         <hr>
         <div class="row mb-4">
@@ -60,25 +69,16 @@
             </button>
         </div>
         <!--butao-->
-        <div class="row mt-5">
-            <div class="col-12 text-center">
-                <a href="https://www.instagram.com/espaco.amandahair?igsh=dzJ2d3Y4MDIwNW12" class="instagram-link" target="_blank">
-                    <i class="bi bi-instagram"></i>
-                    <span>Nos siga no Instagram</span>
-                </a>
-            </div>
-        </div>
         <div class="container py-4">
         <div class="row align-items-center">
 
             <div class="col-md-6 historia-text">
                 <h2 class="fw-bold">Minha História</h2>
                 <p class="lead"> Amanda Hair deu seus primeiros passos no mundo dos alisamentos. Hoje, com mais de 5 anos de experiência e inúmeros cursos de especialização, ela se tornou referência no liso perfeito, se destacando na área por transformar cabelos com resultados surpreendentes e duradouros.</p>
-                <p>💆‍♀️ Atendimento personalizado e humanizado.</p>
-                <p>💖 Carinho e dedicação em cada etapa.</p>
-                <p>🌟 Lisos impecáveis que realçam a beleza natural.</p>
+                <p>sem formol, sem cheiro forte, sem ardência, sem desconforto</p>
+                <p>resultados de excelência e duradouros</p>
+                <p>atendimento personalizado pensando no conforto e bem-estar</p>
                 <p>Além de encantar suas clientes, Amanda compartilha todo o seu conhecimento através de cursos presenciais e on-line, formando novas profissionais e inspirando histórias de sucesso.</p>
-                <p class="fw-bold"> Amanda Hair – Muito mais que um liso perfeito, uma experiência transformadora.</p>
             </div>
         </div>
         
