--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             
                         <div class="col-md-6 text-center">
                 <img src="img/fotodaamanda.jpeg" alt="Amanda Hair" class="larg rounded-circle mb-4 historia-img">
+                <p class="text-center fw-bold mt-2">Espaço Amanda Hair Muito mais que um liso perfeito, uma experiência transformadora </p>
             </div>
             <div class="col-md-6">
                 <h1 class="display-5 fw-bold text-uppercase">Alisamento orgânico personalizado</h1>
@@ -27,8 +28,7 @@
                     <li>💆‍♀️ Atendimento personalizado e humanizado.</li>
                     <li>💖 Carinho e dedicação em cada etapa.</li>
                     <li>🌟 Lisos impecáveis que realçam a beleza natural.</li>
-                    <li> Além de encantar suas clientes, Amanda compartilha todo o seu conhecimento através de cursos presenciais e on-line, formando novas profissionais e inspirando histórias de sucesso</li>                   
-                    <p class="fw-bold"> Amanda Hair – Muito mais que um liso perfeito, uma experiência transformadora.</p>
+                    <li>🏆 Além de encantar suas clientes, Amanda compartilha todo o seu conhecimento através de cursos presenciais e on-line, formando novas profissionais e inspirando histórias de sucesso</li>
                 </ul>
                 <div class="row mt-5">
                     <div class="col-12 text-center">
@@ -85,7 +85,7 @@
     </div>
     </div>
     <a href="https://wa.me/5547997430588?text=Quero%20agendar%20um%20alisamento%20sem%20formol!" class="btn btn-whatsapp" target="_blank">
-        💖 Agende seu horário agora!
+    <img src="img/whats.png" alt="whats" width="35" height="35"> Agende seu horário agora!
     </a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
