--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
                 <p class="lead">Te entrego um liso perfeito, saudável e com brilho, que te traz praticidade no dia a dia.
                  Especialista em alisamento premium em Balneário Camboriú, de alto padrão.</p>
                 <ul>
-                    <li>💆‍♀️ Atendimento personalizado e humanizado.</li>
-                    <li>💖 Carinho e dedicação em cada etapa.</li>
-                    <li>🌟 Lisos impecáveis que realçam a beleza natural.</li>
-                    <li>🏆 Além de encantar suas clientes, Amanda compartilha todo o seu conhecimento através de cursos presenciais e on-line, formando novas profissionais e inspirando histórias de sucesso</li>
+                    <li> Atendimento personalizado e humanizado.</li>
+                    <li> Lisos impecáveis que realçam a beleza .</li>
+                    <li> Além de encantar suas clientes, Amanda compartilha todo o seu conhecimento através de cursos presenciais e on-line, formando novas profissionais e inspirando histórias de sucesso.</li>
                 </ul>
                 <div class="row mt-5">
                     <div class="col-12 text-center">
