--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
                         <img src="img/cabelo amandaa 2.jpeg" alt="Cabelo amanda 2 alternativo">
                     </div>
                     <div class="custom-carousel-card">
-                        <img src="img/cabeloamanda3.jpeg" alt="Cabelo amanda 3">
+                        <img src="img/cabeloamanda1.jpeg" alt="Cabelo amanda 3">
                     </div>
                     <div class="custom-carousel-card">
                         <img src="img/cabeloamanda4.jpeg" alt="Cabelo amanda 4">
                     </div>
+                    <div class="custom-carousel-card">
+                        <img src="img/cabeloamanda3.jpeg" alt="Cabelo amanda 3">
                 </div>
             </div>
             <button class="custom-carousel-button prev">
@@ -77,7 +79,6 @@
                 <p>sem formol, sem cheiro forte, sem ardência, sem desconforto</p>
                 <p>resultados de excelência e duradouros</p>
                 <p>atendimento personalizado pensando no conforto e bem-estar</p>
-                <p>Além de encantar suas clientes, Amanda compartilha todo o seu conhecimento através de cursos presenciais e on-line, formando novas profissionais e inspirando histórias de sucesso.</p>
             </div>
         </div>
         
