--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
             </div>
             <div class="col-md-6">
                 <h1 class="display-5 fw-bold text-uppercase">Alisamento orgânico personalizado</h1>
-                <p class="lead">Te entrego um liso perfeito, saudável e com brilho, que te traz praticidade no dia a
-                    dia.
-                    Especialista em alisamento premium em Balneário Camboriú, de alto padrão.</p>
-                <ul>
+                <p class="lead">Especialista em alisamento premium em Balneário Camboriú, de alto padrão Te entrego um liso perfeito, saudável e com brilho, que te traz praticidade no dia a
+                
+                    dia.</p>
+                    <ul>
+                    <li>  sem formol, sem cheiro forte, sem desconforto. </li>
                     <li> Atendimento personalizado e humanizado.</li>
-                    <li> Lisos impecáveis que realçam a beleza .</li>
+                    <li> Lisos espelhado e duradouros.</li>
                     <li> Além de encantar suas clientes, Amanda compartilha todo o seu conhecimento através de cursos
                         presenciais e on-line, formando novas profissionais e inspirando histórias de sucesso.</li>
                 </ul>
@@ -87,11 +88,7 @@
                         <h2 class="fw-bold">Minha História</h2>
                         <p class="lead"> Amanda Hair deu seus primeiros passos no mundo dos alisamentos. Hoje, com mais
                             de 5 anos de experiência e inúmeros cursos de especialização, ela se tornou referência no
-                            liso perfeito, se destacando na área por transformar cabelos com resultados surpreendentes e
-                            duradouros.</p>
-                        <p>sem formol, sem cheiro forte, sem ardência, sem desconforto</p>
-                        <p>resultados de excelência e duradouros</p>
-                        <p>atendimento personalizado pensando no conforto e bem-estar</p>
+                            liso perfeito, se destacando na área por transformar cabelos com resultados surpreendentes.</p>
                     </div>
                 </div>
 
